# Armednn

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  a.out  armednn.h  common.cpp  common.h  common.mk  concat.h  config.h  core.h  dense.cpp  dense.h  fpooling.h  helper.h  layer.cpp  layer.h  net.h  network.h  node.cpp  node.h  op_regist.h  op_sub.cpp  op_sub.h  operator.h  param.h  split.cpp  split.h  test.cpp
example/: Makefile  ex1.cpp
include/: armednn.h
include/armednn/: activation.h  common.h  helper.h  node.h  op_regist.h  op_sub.h  operator.h  param.h  special.h
include/tsnn/: config.h  core.h  data.h  layer.h  network.h  node.h  op.h  param.h  tsnn.h  unary.h
src/app/: app.cpp  app.h
src/core/: activation.cpp  common.cpp  helper.cpp  node.cpp  op_sub.cpp
src/examples/: test.cpp
src/layers/: concat.cpp  concat.h  dense.cpp  dense.h  split.cpp  split.h
src/op/: concat.cpp  concat.h  conv1d.cpp  conv1d.h  dense.cpp  dense.h  fpooling.cpp  fpooling.h  im2col.cpp  im2col.h  lstm.cpp  lstm.h  split.cpp  split.h
src/ops/: base.cpp
src/tsnn/: config.cpp  core.cpp  layer.cpp  network.cpp  param.cpp
tests/: 0_data.cpp  1_tensor.cpp  Makefile
